--- a/control-plane/principal/base/argocd.yaml
+++ b/control-plane/principal/base/argocd.yaml
@@ -5,14 +5,16 @@ metadata:
 spec:
   controller:
     enabled: false
+  # This could be enabled but would need to be configured
+  # to support AppSets in Any Namespace
   applicationSet:
-    enabled: true
+    enabled: false
   argoCDAgent:
     principal:
       allowedNamespaces:
         - managed-cluster
       enabled: true
-      image: 'quay.io/argoprojlabs/argocd-agent:v0.4.0'
+      image: 'quay.io/argoprojlabs/argocd-agent:v0.4.1'
       jwtAllowGenerate: true
       auth: mtls:CN=([^,]+)
   sourceNamespaces:
@@ -24,39 +26,13 @@ spec:
       g, cluster-admins, role:admin
     scopes: '[groups]'
   redis:
-    resources:
-      limits:
-        cpu: 500m
-        memory: 256Mi
-      requests:
-        cpu: 250m
-        memory: 128Mi
+    enabled: true
   repo:
-    resources:
-      limits:
-        cpu: "1"
-        memory: 1Gi
-      requests:
-        cpu: 250m
-        memory: 256Mi
+    enabled: true
   server:
-    resources:
-      limits:
-        cpu: 500m
-        memory: 256Mi
-      requests:
-        cpu: 125m
-        memory: 128Mi
     route:
       enabled: true
   sso:
     dex:
       openShiftOAuth: true
-      resources:
-        limits:
-          cpu: 500m
-          memory: 256Mi
-        requests:
-          cpu: 250m
-          memory: 128Mi
     provider: dex
